<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_left_register_two"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/login_back_btn_selector"
            android:clickable="true"
            android:drawableLeft="@drawable/back_white"
            android:gravity="center_vertical"
            android:paddingLeft="20dip"
            android:textColor="@color/white"
            android:visibility="visible" >
        </TextView>

        <TextView
            android:id="@+id/tv_center_top_bar"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="20sp" >
        </TextView>

        <TextView
            android:id="@+id/tv_right_top_bar"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/brand_color_btn_selector"
            android:clickable="true"
            android:gravity="center_vertical|right"
            android:paddingRight="20dip"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:visibility="invisible" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dip"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_name_register_two"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingLeft="10dip"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/register_tip"
            android:textColor="@color/text_gray" />

        <EditText
            android:id="@+id/et_aget_register"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/white_color_btn_selector"
            android:clickable="true"
            android:editable="false"
            android:gravity="center"
            android:hint="@string/birthday"
            android:inputType="none"
            android:paddingLeft="10dip"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_next_register_two"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="60dip"
            android:background="@drawable/next_btn_selector"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>