<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_left_register_one"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/login_back_btn_selector"
            android:clickable="true"
            android:drawableLeft="@drawable/back_white"
            android:gravity="center_vertical"
            android:paddingLeft="20dip"
            android:textColor="@color/white"
            android:visibility="visible" >
        </TextView>

        <TextView
            android:id="@+id/tv_center_top_bar"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:gravity="center"
            android:text="注册"
            android:textColor="@color/white"
            android:textSize="20sp" >
        </TextView>

        <TextView
            android:id="@+id/tv_right_top_bar"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/brand_color_btn_selector"
            android:clickable="true"
            android:gravity="center_vertical|right"
            android:paddingRight="20dip"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:visibility="invisible" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dip"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_phone_register_one"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/phone"
            android:inputType="number"
            android:paddingLeft="10dip"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_verify_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dip"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:hint="@string/verify_code"
                android:inputType="number"
                android:paddingLeft="10dip"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="20dip"
                android:background="@drawable/next_btn_selector"
                android:gravity="center"
                android:padding="5dip"
                android:text="@string/get_code"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_pass1_register"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dip"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_pass2_register"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/password_repeat"
            android:inputType="textPassword"
            android:paddingLeft="10dip"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_next_register_one"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="60dip"
            android:background="@drawable/next_btn_selector"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>