<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_left_login"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/login_back_btn_selector"
            android:clickable="true"
            android:drawableLeft="@drawable/back_white"
            android:gravity="center_vertical"
            android:paddingLeft="20dip"
            android:textColor="@color/white"
            android:visibility="visible" >
        </TextView>

        <TextView
            android:id="@+id/tv_center_top_bar"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:gravity="center"
            android:text="登陆"
            android:textColor="@color/white"
            android:textSize="20sp" >
        </TextView>

        <TextView
            android:id="@+id/tv_right_top_bar"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/brand_color_btn_selector"
            android:clickable="true"
            android:gravity="center_vertical|right"
            android:paddingRight="20dip"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:visibility="invisible" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dip"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_phone_login"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:background="@color/white"
            android:drawableLeft="@drawable/ueser"
            android:drawablePadding="10dip"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="20dip"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:background="@color/white"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_pass_login"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="10dip"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="20dip"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/iv_show_pass"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:paddingRight="20dip"
                android:src="@drawable/show_pass" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_forgot_pass_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/common_color_btn_selector"
            android:clickable="true"
            android:gravity="right"
            android:text="@string/forgot_pass"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_login_login"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="60dip"
            android:background="@drawable/next_btn_selector"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>